fix overflow issue

--- a/css/index.css
+++ b/css/index.css
@@ -1034,7 +1034,6 @@ body {
 .container, .container-fluid, .container-xl, .container-lg, .container-md, .container-sm {
   width: 100%;
   margin: 0 auto;
-  padding: 0 20px;
   box-sizing: border-box;
   max-width: 1140px;
 }
@@ -1636,6 +1635,10 @@ body {
   width: 100%;
   height: 0;
   padding: 0;
+}
+
+.o-h {
+  overflow: hidden;
 }
 
 .min-h-200 {
